samples/_failures_safe/1761343450_559ec1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e66a3151.c: In function ‘main’:
./samples/SAFE/__tmp_e66a3151.c:171:5: error: expected expression at end of input
  171 |     if (!
      |     ^~
./samples/SAFE/__tmp_e66a3151.c:171:5: error: expected declaration or statement at end of input
